Various codestyle improvements